added src folder and index.js file for toggling side drawer

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -8,23 +8,24 @@
 </head>
 <body>
     <header>
-        <!-- <aside>
-            <ul>
-                <li><a href='' title="Buy">Buy</a></li>
-                <li><a href='' title="Sell">Sell</a></li>
-                <li><a href='' title="Rent">Rent</a></li>
-                <li><a href='' title="Home Loans">Home Loans</a></li>
-                <li><a href='' title="Mortgage Rent">Mortgage Rent</a></li>
+        <div>
+            <ul id='ul'>
+                <li><a class='list' href='' title="Buy">Buy</a></li>
+                <li><a class='list' href='' title="Sell">Sell</a></li>
+                <li><a class='list' href='' title="Rent">Rent</a></li>
+                <li><a class='list' href='' title="Home Loans">Home Loans</a></li>
+                <li><a class='list' href='' title="Mortgage Rent">Mortgage Rent</a></li>
             </ul>
-        </aside> -->
+        </div>
         <nav>
             <span>LOGO</span>
             <ul>
-                <li><a href='' title="Buy">Buy</a></li>
-                <li><a href='' title="Sell">Sell</a></li>
-                <li><a href='' title="Rent">Rent</a></li>
-                <li><a href='' title="Home Loans">Home Loans</a></li>
-                <li><a href='' title="Mortgage Rent">Mortgage Rent</a></li>
+                <li><a class='list_a'class='list'  href='/' title="Home">Home</a></li>
+                <li><a class='list_a' href='./buy.html' title="Buy">Buy</a></li>
+                <li><a class='list_a' href='' title="Sell">Sell</a></li>
+                <li><a class='list_a' href='' title="Rent">Rent</a></li>
+                <li><a class='list_a' href='' title="Home Loans">Home Loans</a></li>
+                <li><a class='list_a' href='' title="Mortgage Rent">Mortgage Rent</a></li>
             </ul>
             <span class="menu">MENU</span>
         </nav>
@@ -79,5 +80,6 @@
         </div>
     </div>
     </article>
+    <script src="../../src/index.js"></script>
 </body>
 </html>
